# containers

./: .dockerignore  .gitignore  Makefile  README.md  docker-bake.hcl  verification.py
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md
astroai-containers/: README.md
config/: astroai-lab.in  cadc-tools.txt  jupyter_server_config.py  ray-deps.txt  starship.toml
dockerfiles/: install-ttyd.sh
dockerfiles/base/: Dockerfile
dockerfiles/full/: Dockerfile
dockerfiles/marimo/: Dockerfile
dockerfiles/notebook/: Dockerfile
dockerfiles/openresearch/: Dockerfile
dockerfiles/openworker/: Dockerfile
dockerfiles/python/: Dockerfile
dockerfiles/ray-base/: Dockerfile
dockerfiles/ray-manager/: Dockerfile
dockerfiles/vscode/: Dockerfile
docs/: CONTRIBUTING.md  HEADLESS_PENDING.md  OPERATORS.md  RAY.md  RUNTIME.md  USAGE.md  ray-build-plan.md
ray/manager/: FROZEN.md  app.py  background_tasks.py  canfar_ops.py  cluster.py  dashboard_proxy.py  preflight.py  pyproject.toml  ray_cluster.py  reconcile.py  settings.py  state_store.py  ui.py  worker_logs.py  workers.py
ray/manager/tests/: test_lifecycle.py  test_modules.py
scripts/: astroai-cache-prune  astroai-clone.sh  astroai-data-sync.sh  astroai-debug.sh  astroai-env-list  astroai-env-resume  astroai-env-save  astroai-help.sh  astroai-home-usage  astroai-install-ai.sh  astroai-kernel-register  astroai-new.sh  astroai-profile.sh  astroai-project-init.sh  astroai-session-archive.sh  astroai-status.sh  astroai-update-ai.sh  build-custom-webterm-ui.py  canfar-verify-agents.sh  canfar-verify.sh  common-init.sh  harbor-cleanup.sh  lint-doc-quota.sh  patch-clint-py313.sh  peek  peek_selfcheck.sh  skaha-startup-marimo.sh  skaha-startup-notebook.sh  skaha-startup-openresearch.sh  skaha-startup-openworker.sh  skaha-startup-vscode.sh  skaha-startup-webterm.sh  startup-marimo.sh  startup-notebook.sh  startup-openresearch.sh  startup-openworker.sh  startup-ray-manager.sh  startup-vscode.sh  startup-webterm.sh  test-canfar-lab-loop.sh  (+10 more)
(+10 files in other folders)
